# ppath

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  sudoers.conf
.github/workflows/: tag.yaml
ppath/: __init__.py  __init__.pyi
src/: setreuid.py  setreuid_env.py  setreuid_root.py  setreuid_root_python_normal.py  setreuid_user.py
src/mproject/: __init__.py
src/ppath/: __init__.py  __init__.pyi
src/setuid/: Makefile  __init__.py  demo.py  demo.sh  demo_linux.py  geteuid  geteuid.c  seteuid  seteuid.c
