[metadata]
name = ppath

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8

[options.extras_require]
test =
    build
    darling
    ipython
    pytest
    pytest-asyncio
    setuptools
    wheel
[options.packages.find]
where = src
