[metadata]
name = ppath

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
install_requires =
    toml
    docutils>=0.3
package_dir =
    =src
packages = find:
python_requires = >=3.8

[options.extras_require]
test =
    build
    darling
    icecream
    ipython
    pytest
    pytest-asyncio
    setuptools
    tox
    wheel
[options.packages.find]
where = src
